--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "react-app",
     "version": "0.1.0",
-    "homepage": "https://h-habka.github.io/portfolio/",
+    "homepage": "https://h-habka.github.io/hasan-portfolio/",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
