--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "react-lazy-load-image-component": "^1.5.5",
         "react-responsive": "^9.0.0-beta.10",
         "react-scripts": "5.0.1",
+        "react-slick": "^0.29.0",
+        "slick-carousel": "^1.8.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
